--- a/.github/workflows/test-aws-ec2.yml
+++ b/.github/workflows/test-aws-ec2.yml
@@ -58,55 +58,44 @@ jobs:
             sleep 10
           done
 
-      - name: Setup test environment on EC2
-        id: setup
+      - name: Setup and run tests on EC2
+        id: run_tests
         run: |
           RUN_ID=$(date +%Y%m%d-%H%M%S)
           echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
 
-          echo "Setting up Node.js and dependencies on EC2..."
+          echo "Setting up environment and running tests on EC2..."
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids ${{ github.event.inputs.instance_id }} \
             --document-name "AWS-RunShellScript" \
+            --timeout-seconds 1800 \
             --parameters 'commands=[
+              "echo \"=== Installing Node.js ===\"",
               "curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash",
               "export NVM_DIR=\"$HOME/.nvm\"",
               "[ -s \"$NVM_DIR/nvm.sh\" ] && . \"$NVM_DIR/nvm.sh\"",
               "nvm install 20",
-              "node --version",
-              "npm --version"
-            ]' \
-            --query 'Command.CommandId' \
-            --output text)
-
-          echo "Setup Command ID: $COMMAND_ID"
-          sleep 20
-
-      - name: Run tests on EC2
-        id: run_tests
-        run: |
-          RUN_ID=${{ steps.setup.outputs.run_id }}
-
-          echo "Running Playwright tests on EC2..."
-          COMMAND_ID=$(aws ssm send-command \
-            --instance-ids ${{ github.event.inputs.instance_id }} \
-            --document-name "AWS-RunShellScript" \
-            --parameters 'commands=[
-              "export NVM_DIR=\"$HOME/.nvm\"",
-              "[ -s \"$NVM_DIR/nvm.sh\" ] && . \"$NVM_DIR/nvm.sh\"",
+              "node --version && npm --version",
+              "echo \"=== Cloning repository ===\"",
               "cd /tmp && rm -rf test-run-'$RUN_ID'",
               "mkdir -p test-run-'$RUN_ID' && cd test-run-'$RUN_ID'",
               "git clone https://github.com/${{ github.repository }}.git .",
+              "echo \"=== Installing npm dependencies ===\"",
               "npm ci",
+              "echo \"=== Installing system dependencies ===\"",
               "sudo yum install -y atk cups-libs gtk3 libXcomposite alsa-lib libXdamage libXrandr mesa-libgbm pango at-spi2-atk libXScrnSaver",
+              "echo \"=== Installing Playwright browsers ===\"",
               "npx playwright install chromium",
+              "echo \"=== Running tests ===\"",
               "npm test || true",
-              "ls -la playwright-report/ allure-results/",
+              "echo \"=== Test results ===\"",
+              "ls -la playwright-report/ allure-results/ || echo \"No reports found\"",
+              "echo \"=== Uploading to S3 ===\"",
               "tar -czf results.tar.gz playwright-report/ allure-results/ || true",
-              "aws s3 cp results.tar.gz s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/results.tar.gz",
-              "aws s3 cp playwright-report/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/playwright-report/ --recursive || true",
-              "aws s3 cp allure-results/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/allure-results/ --recursive || true",
-              "echo \"Tests completed and uploaded to S3\""
+              "aws s3 cp results.tar.gz s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/results.tar.gz || echo \"Failed to upload tar\"",
+              "aws s3 cp playwright-report/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/playwright-report/ --recursive || echo \"No playwright-report\"",
+              "aws s3 cp allure-results/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/allure-results/ --recursive || echo \"No allure-results\"",
+              "echo \"=== Completed ===\""
             ]' \
             --query 'Command.CommandId' \
             --output text)
