Fix: Use Docker to run Playwright tests (Amazon Linux compatibility)

--- a/.github/workflows/test-aws-ec2.yml
+++ b/.github/workflows/test-aws-ec2.yml
@@ -70,24 +70,16 @@ jobs:
             --document-name "AWS-RunShellScript" \
             --timeout-seconds 1800 \
             --parameters 'commands=[
-              "echo \"=== Installing Node.js ===\"",
-              "curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash",
-              "export NVM_DIR=\"$HOME/.nvm\"",
-              "[ -s \"$NVM_DIR/nvm.sh\" ] && . \"$NVM_DIR/nvm.sh\"",
-              "nvm install 20",
-              "node --version && npm --version",
+              "echo \"=== Installing Docker ===\"",
+              "sudo yum install -y docker",
+              "sudo systemctl start docker",
+              "sudo usermod -a -G docker ssm-user",
               "echo \"=== Cloning repository ===\"",
               "cd /tmp && rm -rf test-run-'$RUN_ID'",
               "mkdir -p test-run-'$RUN_ID' && cd test-run-'$RUN_ID'",
               "git clone https://github.com/${{ github.repository }}.git .",
-              "echo \"=== Installing npm dependencies ===\"",
-              "npm ci",
-              "echo \"=== Installing system dependencies ===\"",
-              "sudo yum install -y atk cups-libs gtk3 libXcomposite alsa-lib libXdamage libXrandr mesa-libgbm pango at-spi2-atk libXScrnSaver",
-              "echo \"=== Installing Playwright browsers ===\"",
-              "npx playwright install chromium",
-              "echo \"=== Running tests ===\"",
-              "npm test || true",
+              "echo \"=== Running tests in Docker ===\"",
+              "sudo docker run --rm -v $(pwd):/work -w /work mcr.microsoft.com/playwright:v1.48.0-jammy /bin/bash -c \"npm ci && npx playwright install chromium && npm test\" || true",
               "echo \"=== Test results ===\"",
               "ls -la playwright-report/ allure-results/ || echo \"No reports found\"",
               "echo \"=== Uploading to S3 ===\"",
