--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests on AWS EC2
+name: Python Tests
 
 on:
   push:
@@ -6,60 +6,33 @@ on:
   pull_request:
   workflow_dispatch:
 
-permissions:
-  id-token: write
-  contents: read
-
-env:
-  AWS_REGION: us-east-1
-  NODE_VERSION: '20'
-
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          python-version: '3.11'
       
       - name: Install dependencies
-        run: |
-          npm ci
-          npx playwright install --with-deps chromium
+        run: pip install -r requirements.txt
       
-      - name: Run Playwright tests
-        run: npm test
+      - name: Run tests
+        run: pytest tests/ -v --html=report.html --self-contained-html --alluredir=allure-results
       
-      - name: Generate Allure report
-        if: always()
-        run: |
-          npm install -g allure-commandline
-          allure generate allure-results -o allure-report --clean
-      
-      - name: Upload Playwright report
+      - name: Upload HTML report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
+          name: pytest-html-report
+          path: report.html
       
-      - name: Upload Allure report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
-          path: allure-report/
-          retention-days: 30
-      
-      - name: Upload test results
+      - name: Upload Allure results
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: allure-results
           path: allure-results/
-          retention-days: 30
