--- a/.github/workflows/test-aws-ec2.yml
+++ b/.github/workflows/test-aws-ec2.yml
@@ -76,22 +76,24 @@ jobs:
               "git clone https://github.com/${{ github.repository }}.git .",
               "echo \"=== Python version ===\"",
               "python3 --version",
+              "echo \"=== Installing pip ===\"",
+              "curl -sS https://bootstrap.pypa.io/get-pip.py | python3 - --user",
+              "export PATH=$HOME/.local/bin:$PATH",
               "echo \"=== Installing dependencies ===\"",
-              "python3 -m pip install --user -r requirements.txt",
+              "pip3 install --user -r requirements.txt",
               "echo \"=== Verify pytest installed ===\"",
-              "python3 -m pytest --version",
+              "pip3 list | grep pytest",
               "echo \"=== List test files ===\"",
               "ls -la tests/",
               "echo \"=== Running tests ===\"",
-              "python3 -m pytest tests/ -v --html=report.html --self-contained-html --alluredir=allure-results 2>&1 || echo \"Tests failed but continuing\"",
+              "python3 -m pytest tests/ -v --html=report.html --self-contained-html --alluredir=allure-results",
               "echo \"=== Test results ===\"",
-              "ls -la report.html allure-results/ 2>&1 || echo \"No reports found\"",
-              "cat report.html 2>&1 | head -20 || echo \"No HTML report\"",
+              "ls -la report.html allure-results/",
               "echo \"=== Uploading to S3 ===\"",
-              "tar -czf results.tar.gz report.html allure-results/ 2>&1 || echo \"No results to tar\"",
-              "aws s3 cp results.tar.gz s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/results.tar.gz 2>&1 || echo \"Failed to upload tar\"",
-              "aws s3 cp report.html s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/report.html 2>&1 || echo \"No HTML report to upload\"",
-              "aws s3 cp allure-results/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/allure-results/ --recursive 2>&1 || echo \"No allure results to upload\"",
+              "tar -czf results.tar.gz report.html allure-results/",
+              "aws s3 cp results.tar.gz s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/results.tar.gz",
+              "aws s3 cp report.html s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/report.html",
+              "aws s3 cp allure-results/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/allure-results/ --recursive",
               "echo \"=== Completed ===\""
             ]' \
             --query 'Command.CommandId' \
