--- a/.github/workflows/test-aws-ec2.yml
+++ b/.github/workflows/test-aws-ec2.yml
@@ -70,31 +70,27 @@ jobs:
             --document-name "AWS-RunShellScript" \
             --timeout-seconds 1800 \
             --parameters 'commands=[
-              "echo \"=== Setup Python environment ===\"",
+              "set -e",
+              "echo \"=== Setup ===\"",
               "cd /tmp && rm -rf test-run-'$RUN_ID'",
               "mkdir -p test-run-'$RUN_ID' && cd test-run-'$RUN_ID'",
               "git clone https://github.com/${{ github.repository }}.git .",
-              "echo \"=== Python version ===\"",
               "python3 --version",
-              "echo \"=== Installing pip ===\"",
-              "curl -sS https://bootstrap.pypa.io/get-pip.py | python3 - --user",
-              "export PATH=$HOME/.local/bin:$PATH",
-              "echo \"=== Installing dependencies ===\"",
-              "pip3 install --user -r requirements.txt",
-              "echo \"=== Verify pytest installed ===\"",
-              "pip3 list | grep pytest",
-              "echo \"=== List test files ===\"",
-              "ls -la tests/",
-              "echo \"=== Running tests ===\"",
-              "python3 -m pytest tests/ -v --html=report.html --self-contained-html --alluredir=allure-results",
-              "echo \"=== Test results ===\"",
-              "ls -la report.html allure-results/",
-              "echo \"=== Uploading to S3 ===\"",
+              "echo \"=== Install pip ===\"",
+              "sudo yum install -y python3-pip",
+              "pip3 --version",
+              "echo \"=== Install packages ===\"",
+              "pip3 install pytest pytest-html allure-pytest requests",
+              "echo \"=== Run tests ===\"",
+              "pytest tests/ -v --html=report.html --self-contained-html --alluredir=allure-results",
+              "echo \"=== Results ===\"",
+              "ls -lh report.html allure-results/",
+              "echo \"=== Upload ===\"",
               "tar -czf results.tar.gz report.html allure-results/",
-              "aws s3 cp results.tar.gz s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/results.tar.gz",
-              "aws s3 cp report.html s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/report.html",
+              "aws s3 cp results.tar.gz s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/",
+              "aws s3 cp report.html s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/",
               "aws s3 cp allure-results/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/allure-results/ --recursive",
-              "echo \"=== Completed ===\""
+              "echo \"Done!\""
             ]' \
             --query 'Command.CommandId' \
             --output text)
