--- a/.github/workflows/test-aws-ec2.yml
+++ b/.github/workflows/test-aws-ec2.yml
@@ -68,27 +68,16 @@ jobs:
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids ${{ github.event.inputs.instance_id }} \
             --document-name "AWS-RunShellScript" \
-            --timeout-seconds 1800 \
+            --timeout-seconds 600 \
             --parameters 'commands=[
-              "echo \"=== Setup ===\"",
-              "cd /tmp && rm -rf test-run-'$RUN_ID' || true",
-              "mkdir -p test-run-'$RUN_ID' && cd test-run-'$RUN_ID'",
-              "git clone https://github.com/${{ github.repository }}.git . || exit 1",
-              "python3 --version",
-              "echo \"=== Install pip ===\"",
-              "sudo yum install -y python3-pip || exit 1",
-              "pip3 --version || exit 1",
-              "echo \"=== Install packages ===\"",
-              "pip3 install pytest pytest-html allure-pytest requests || exit 1",
-              "pytest --version || exit 1",
-              "echo \"=== List tests ===\"",
-              "ls -la tests/",
-              "echo \"=== Run tests ===\"",
-              "pytest tests/ -v --html=report.html --self-contained-html --alluredir=allure-results || echo \"Tests had failures\"",
-              "echo \"=== Results ===\"",
-              "ls -lh report.html allure-results/ || echo \"No results\"",
-              "echo \"=== Upload ===\"",
-              "if [ -f report.html ]; then tar -czf results.tar.gz report.html allure-results/; aws s3 cp results.tar.gz s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/; aws s3 cp report.html s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/; aws s3 cp allure-results/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/allure-results/ --recursive; echo \"Uploaded!\"; else echo \"No report to upload\"; fi"
+              "cd /tmp && rm -rf test-'$RUN_ID' && mkdir test-'$RUN_ID' && cd test-'$RUN_ID'",
+              "git clone https://github.com/${{ github.repository }}.git .",
+              "sudo yum install -y python3-pip",
+              "pip3 install pytest pytest-html",
+              "pytest tests/ -v --html=report.html --self-contained-html",
+              "ls -lh report.html",
+              "aws s3 cp report.html s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/report.html",
+              "echo Done"
             ]' \
             --query 'Command.CommandId' \
             --output text)
