--- a/.github/workflows/test-aws-ec2.yml
+++ b/.github/workflows/test-aws-ec2.yml
@@ -72,9 +72,18 @@ jobs:
             --parameters 'commands=[
               "cd /tmp && rm -rf test-'$RUN_ID' && mkdir test-'$RUN_ID' && cd test-'$RUN_ID'",
               "git clone https://github.com/${{ github.repository }}.git .",
+              "echo === Files cloned ===",
+              "ls -la",
+              "echo === Test files ===",
+              "ls -la tests/",
+              "cat tests/test_simple.py",
+              "echo === Install pip ===",
               "sudo yum install -y python3-pip",
+              "echo === Install pytest ===",
               "pip3 install pytest pytest-html",
-              "pytest tests/ -v --html=report.html --self-contained-html",
+              "echo === Run tests ===",
+              "pytest tests/test_simple.py -v --html=report.html --self-contained-html",
+              "echo === Results ===",
               "ls -lh report.html",
               "aws s3 cp report.html s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/report.html",
               "echo Done"
