--- a/.github/workflows/test-aws-ec2.yml
+++ b/.github/workflows/test-aws-ec2.yml
@@ -58,38 +58,89 @@ jobs:
             sleep 10
           done
 
-      - name: Setup and run tests on EC2
-        id: run_tests
+      - name: Setup environment on EC2
+        id: setup
         run: |
           RUN_ID=$(date +%Y%m%d-%H%M%S)
           echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
-
-          echo "Running Python tests on EC2..."
-          COMMAND_ID=$(aws ssm send-command \
+          
+          echo "Setting up environment..."
+          SETUP_CMD=$(aws ssm send-command \
             --instance-ids ${{ github.event.inputs.instance_id }} \
             --document-name "AWS-RunShellScript" \
-            --timeout-seconds 600 \
             --parameters 'commands=[
               "cd /tmp && rm -rf test-'$RUN_ID' && mkdir test-'$RUN_ID' && cd test-'$RUN_ID'",
               "git clone https://github.com/${{ github.repository }}.git .",
-              "echo === Files cloned ===",
-              "ls -la",
-              "echo === Test files ===",
-              "ls -la tests/",
-              "cat tests/test_simple.py",
-              "echo === Install pip ===",
               "sudo yum install -y python3-pip",
-              "echo === Install pytest ===",
               "pip3 install pytest pytest-html",
-              "echo === Run tests ===",
-              "pytest tests/test_simple.py -v --html=report.html --self-contained-html",
-              "echo === Results ===",
-              "ls -lh report.html",
-              "aws s3 cp report.html s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/report.html",
-              "echo Done"
+              "echo Setup completed"
             ]' \
             --query 'Command.CommandId' \
             --output text)
+          
+          echo "Setup Command ID: $SETUP_CMD"
+          
+          # Wait for setup to complete
+          for i in {1..30}; do
+            STATUS=$(aws ssm get-command-invocation \
+              --command-id $SETUP_CMD \
+              --instance-id ${{ github.event.inputs.instance_id }} \
+              --query 'Status' \
+              --output text 2>/dev/null || echo "Pending")
+            echo "Setup Status: $STATUS"
+            if [ "$STATUS" = "Success" ]; then
+              echo "Setup completed successfully"
+              break
+            elif [ "$STATUS" = "Failed" ]; then
+              echo "Setup failed"
+              exit 1
+            fi
+            sleep 5
+          done
+      
+      - name: Run tests on EC2
+        run: |
+          RUN_ID=${{ steps.setup.outputs.run_id }}
+          
+          echo "Running tests..."
+          TEST_CMD=$(aws ssm send-command \
+            --instance-ids ${{ github.event.inputs.instance_id }} \
+            --document-name "AWS-RunShellScript" \
+            --parameters 'commands=[
+              "cd /tmp/test-'$RUN_ID'",
+              "pytest tests/test_simple.py -v --html=report.html --self-contained-html",
+              "aws s3 cp report.html s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/report.html --content-type text/html",
+              "echo Report URL: https://${{ github.event.inputs.s3_bucket }}.s3.amazonaws.com/'$RUN_ID'/report.html"
+            ]' \
+            --query 'Command.CommandId' \
+            --output text)
+          
+          echo "Test Command ID: $TEST_CMD"
+          
+          # Wait for tests to complete
+          for i in {1..30}; do
+            STATUS=$(aws ssm get-command-invocation \
+              --command-id $TEST_CMD \
+              --instance-id ${{ github.event.inputs.instance_id }} \
+              --query 'Status' \
+              --output text 2>/dev/null || echo "Pending")
+            echo "Test Status: $STATUS"
+            if [ "$STATUS" = "Success" ] || [ "$STATUS" = "Failed" ]; then
+              break
+            fi
+            sleep 5
+          done
+          
+          # Show output
+          echo "=== Test Output ==="
+          aws ssm get-command-invocation \
+            --command-id $TEST_CMD \
+            --instance-id ${{ github.event.inputs.instance_id }} \
+            --query 'StandardOutputContent' \
+            --output text
+          
+          echo ""
+          echo "Report URL: https://${{ github.event.inputs.s3_bucket }}.s3.ap-southeast-1.amazonaws.com/$RUN_ID/report.html"
 
           echo "Test Command ID: $COMMAND_ID"
 
