--- a/.github/workflows/test-aws-ec2.yml
+++ b/.github/workflows/test-aws-ec2.yml
@@ -71,8 +71,10 @@ jobs:
             --parameters 'commands=[
               "cd /tmp && rm -rf test-'$RUN_ID' && mkdir test-'$RUN_ID' && cd test-'$RUN_ID'",
               "git clone https://github.com/${{ github.repository }}.git .",
-              "sudo yum install -y python3-pip",
-              "pip3 install pytest pytest-html",
+              "sudo yum install -y python3-pip java-17-amazon-corretto-headless",
+              "pip3 install -r requirements.txt",
+              "wget -q https://github.com/allure-framework/allure2/releases/download/2.25.0/allure-2.25.0.tgz",
+              "tar -xzf allure-2.25.0.tgz",
               "echo Setup completed"
             ]' \
             --query 'Command.CommandId' \
@@ -108,9 +110,13 @@ jobs:
             --document-name "AWS-RunShellScript" \
             --parameters 'commands=[
               "cd /tmp/test-'$RUN_ID'",
-              "pytest tests/test_simple.py -v --html=report.html --self-contained-html",
+              "pytest tests/test_simple.py -v --html=report.html --self-contained-html --alluredir=allure-results",
+              "./allure-2.25.0/bin/allure generate allure-results -o allure-report --clean",
               "aws s3 cp report.html s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/report.html --content-type text/html",
-              "echo Report URL: https://${{ github.event.inputs.s3_bucket }}.s3.amazonaws.com/'$RUN_ID'/report.html"
+              "aws s3 cp allure-report/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/allure-report/ --recursive --content-type text/html --exclude \"*\" --include \"*.html\"",
+              "aws s3 cp allure-report/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/allure-report/ --recursive --exclude \"*.html\"",
+              "echo Pytest Report: https://${{ github.event.inputs.s3_bucket }}.s3.ap-southeast-1.amazonaws.com/'$RUN_ID'/report.html",
+              "echo Allure Report: https://${{ github.event.inputs.s3_bucket }}.s3.ap-southeast-1.amazonaws.com/'$RUN_ID'/allure-report/index.html"
             ]' \
             --query 'Command.CommandId' \
             --output text)
@@ -140,7 +146,9 @@ jobs:
             --output text
           
           echo ""
-          echo "Report URL: https://${{ github.event.inputs.s3_bucket }}.s3.ap-southeast-1.amazonaws.com/$RUN_ID/report.html"
+          echo "📊 Reports:"
+          echo "Pytest: https://${{ github.event.inputs.s3_bucket }}.s3.ap-southeast-1.amazonaws.com/$RUN_ID/report.html"
+          echo "Allure: https://${{ github.event.inputs.s3_bucket }}.s3.ap-southeast-1.amazonaws.com/$RUN_ID/allure-report/index.html"
 
           echo "Test Command ID: $COMMAND_ID"
 
