--- a/.github/workflows/test-aws-ec2.yml
+++ b/.github/workflows/test-aws-ec2.yml
@@ -110,13 +110,14 @@ jobs:
             --document-name "AWS-RunShellScript" \
             --parameters 'commands=[
               "cd /tmp/test-'$RUN_ID'",
-              "pytest tests/test_simple.py -v --html=report.html --self-contained-html --alluredir=allure-results",
+              "ls -la tests/",
+              "cat tests/test_simple.py",
+              "python3 -m pytest tests/ -v --html=report.html --self-contained-html --alluredir=allure-results",
               "./allure-2.25.0/bin/allure generate allure-results -o allure-report --clean",
               "aws s3 cp report.html s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/report.html --content-type text/html",
-              "aws s3 cp allure-report/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/allure-report/ --recursive --content-type text/html --exclude \"*\" --include \"*.html\"",
-              "aws s3 cp allure-report/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/allure-report/ --recursive --exclude \"*.html\"",
-              "echo Pytest Report: https://${{ github.event.inputs.s3_bucket }}.s3.ap-southeast-1.amazonaws.com/'$RUN_ID'/report.html",
-              "echo Allure Report: https://${{ github.event.inputs.s3_bucket }}.s3.ap-southeast-1.amazonaws.com/'$RUN_ID'/allure-report/index.html"
+              "aws s3 sync allure-report/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/allure-report/ --content-type text/html --exclude \"*\" --include \"*.html\"",
+              "aws s3 sync allure-report/ s3://${{ github.event.inputs.s3_bucket }}/'$RUN_ID'/allure-report/ --exclude \"*.html\"",
+              "echo Done"
             ]' \
             --query 'Command.CommandId' \
             --output text)
